worked on navigation and header styling

--- a/index.html
+++ b/index.html
@@ -4,68 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Marketing page for restaurant passport</title>
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
     <div class="body-container">
-        <div class="nav-wrapper">
-            <figure>
-                <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
-            </figure>
-            <h1>
-                restaurant passport
-            </h1>
-            <nav>
-                <a href="">Cities</a>
-                <a href="">Login</a>
-                <a href="">Partners</a>
-                <a href="">Help</a>
-                <a href="">Meet the team</a>
-            </nav>
+        <div class="nav-header">
+            <div class="nav-wrapper">
+                <div class="nav-logo">
+                    <!-- <figure> -->
+                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                    <!-- </figure> -->
+                    <h1>restaurant passport</h1>
+                </div>
+                <nav>
+                    <a href="./cities.html">Cities</a>
+                    <a href="#">Login</a>
+                    <a href="#">Partners</a>
+                    <a href="#">Help</a>
+                    <a href="#">Meet the team</a>
+                </nav>
+            </div>
+            <header class="header-wrapper">
+                <div class="header-left">
+                    <p>
+                        We are removing the guesswork out of eating out.<br> Find great restaurants in your location now<br>
+                        and give them your own stamp of approval.
+                    </p>
+                </div>
+                <div class="header-form">
+                    <form>
+                        <div>
+                            <h2>
+                                Apply now
+                            </h2>
+                            <h3>
+                                Enter your details to access
+                                restaurants close to you
+                            </h3>
+                        </div>
+                        <div>
+                            <label>
+                                name<br>
+                            </label>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label>
+                                email<br>
+                            </label>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label>
+                                location<br>
+                            </label>
+                            <input type="text">
+                        </div>
+                        <button>Sign up</button>
+                    </form>
+                </div>
+            </header>
         </div>
-        <header class="header-wrapper">
-            <div>
-                <figure>
-                    <img src="./imgs/micheile-henderson-Eu33gzoEVts-unsplash.jpg">
-                </figure>
-                <p>
-                    We are removing the guesswork out of eating out.<br> Find great restaurants in your location now<br> 
-                    and give them your own stamp of approval.     
-                </p>
-            </div>
-            <div>
-                <form>
-                    <div>
-                        <h2>
-                            Apply now
-                        </h2>
-                        <h2>
-                            Enter your info to access 
-                            restaurants close to you
-                        </h2>
-                    </div>
-                    <div>
-                        <label>
-                            name
-                        </label>
-                        <input type="text">
-                    </div>
-                    <div>
-                        <label>
-                            email
-                        </label>
-                        <input type="text">
-                    </div>
-                    <div>
-                        <label>
-                            location
-                        </label>
-                        <input type="text">
-                    </div>
-                    <button>Sign up</button>
-                </form>
-            </div>
-        </header>
         <main class="main-wrapper">
             <div>
                 <section>
@@ -87,20 +87,20 @@
                         <h3>Category 3</h3>
                         <li> Outdoor restaurant</li>
                         <li>Indoor restaurant</li>
-                        <li>Rooftop restaurant</li>  
+                        <li>Rooftop restaurant</li>
                     </ul>
                 </section>
                 <section>
                     <h2>View by popularity</h2>
                     <p>
-                        Find the current trendiest and 
+                        Find the current trendiest and
                         hottest restaurant in  your location
                     </p>
                 </section>
                 <section>
                     <h2>View by cost</h2>
                     <p>
-                        Find great restaurants with 
+                        Find great restaurants with
                         affordable prices!
                     </p>
                 </section>
@@ -108,7 +108,7 @@
             <h2>Popular in their categories</h2>
             <div class="main-mid-wrapper">
                 <section>
-                    <img src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    <!-- <img src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg"> -->
                     <p>
                         Name: Pete’s pasta
                         Category: Date Nights
@@ -117,7 +117,7 @@
                     </p>
                 </section>
                 <section>
-                    <img src="./imgs/mgg-vitchakorn-vBOxsZrfiCw-unsplash.jpg">
+                    <!-- <img src="./imgs/mgg-vitchakorn-vBOxsZrfiCw-unsplash.jpg"> -->
                     <p>
                         Name: Urban gourmet
                         Category:  Kid friendly
@@ -126,7 +126,7 @@
                     </p>
                 </section>
                 <section>
-                    <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">
+                    <!-- <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg"> -->
                     <p>
                         Name: Tapas Rioja
                         Category: Large groups
@@ -139,7 +139,7 @@
                 <section>
                     <p>
                         Do you own a restaurant?
-                        We’d like to know more about your restaurant and 
+                        We’d like to know more about your restaurant and
                         introduce our users to it!
                     </p>
                     <button>Learn more</button>
@@ -147,7 +147,7 @@
                 <section>
                     <p>
                         Are you a foodie?
-                        Here’s an opportunity of a lifetime, eat, curate 
+                        Here’s an opportunity of a lifetime, eat, curate
                         restaurants in your location and get paid!
                     </p>
                     <button>Learn more</button>
@@ -156,15 +156,16 @@
         </main>
         <footer>
             <nav>
-                <a>Cities</a>
-                <a> Sign up/Login</a>
-                <a>Partners</a>
-                <a>Help</a>
-                <a> Restaurant listing application</a>
-                <a>Reviewer application</a>
-                <a>Meet the team</a>
-                <a>Blog</a>
+                <a href="./cities.html">Cities</a>
+                <a href="#"> Sign up/Login</a>
+                <a href="#">Partners</a>
+                <a href="#">Help</a>
+                <a href="#"> Restaurant listing application</a>
+                <a href="#">Reviewer application</a>
+                <a href="#">Meet the team</a>
+                <a href="#">Blog</a>
             </nav>
+            <h3>Copyright 2019</h3>
         </footer>
     </div>
 </body>
