styled main top wrapper

--- a/index.html
+++ b/index.html
@@ -67,67 +67,52 @@
             </header>
         </div>
         <main class="main-wrapper">
-            <div>
-                <section>
+            <div class="main-top-wrapper">
+                <section class="category-section">
                     <h2>View by Category</h2>
-                    <ul>
                         <h3>Category 1</h3>
-                        <li>Lunch</li>
-                        <li>Breakfast</li>
-                        <li>Dinner</li>
-                        <li>24/7</li>
-                        <li>All day eating</li>
-                        <li>Alcohol served</li>
-                        <li>No alcohol</li>
+                        <p>Lunch, Breakfast, Dinner, 24/7,
+                            All day eating, <br>Alcohol served, No alcohol</p>
                         <h3>Category 2</h3>
-                        <li>Kid friendly</li>
-                        <li>Business eating</li>
-                        <li>Date night</li>
-                        <li>Big groups</li>
+                        <p>Kid friendly, Business eating, Date night, Big groups</p>
                         <h3>Category 3</h3>
-                        <li> Outdoor restaurant</li>
-                        <li>Indoor restaurant</li>
-                        <li>Rooftop restaurant</li>
-                    </ul>
+                        <p> Outdoor restaurant, Indoor restaurant, Rooftop restaurant</p>
                 </section>
+                <!-- <hr> -->
                 <section>
                     <h2>View by popularity</h2>
                     <p>
-                        Find the current trendiest and
-                        hottest restaurant in  your location
+                        Get to know the current popular restaurant in your location.<br>
+                        You will never have to miss out on the popular places anymore.<br>
+                        Find the current trendiest and hottest restaurant in  your location
                     </p>
                 </section>
+                <!-- <hr> -->
                 <section>
                     <h2>View by cost</h2>
                     <p>
-                        Find great restaurants with
-                        affordable prices!
+                        Eating out does not have create a hole
+                        in your pocket.<br>Find great restaurants with
+                        affordable<br> prices and always come back for more.
                     </p>
                 </section>
             </div>
-            <h2>Popular in their categories</h2>
+            <div class="header-2">
+                <h2>Popular in their categories</h2>
+            </div>
             <div class="main-mid-wrapper">
-                <section>
-                    <!-- <img src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg"> -->
-                    <p>
+                <section class="img-wrapper-1">
+                    <img id="img-1" src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    <p id="hidden-p">
                         Name: Pete’s pasta
                         Category: Date Nights
                         Location: Manhattan, New York
                         Rating: 85%
                     </p>
                 </section>
-                <section>
-                    <!-- <img src="./imgs/mgg-vitchakorn-vBOxsZrfiCw-unsplash.jpg"> -->
-                    <p>
-                        Name: Urban gourmet
-                        Category:  Kid friendly
-                        Location: Nairobi, Kenya
-                        Rating: 91%
-                    </p>
-                </section>
-                <section>
-                    <!-- <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg"> -->
-                    <p>
+                <section class="img-wrapper-3">
+                     <img id="img-3" src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg"> 
+                    <p id="hidden-p3">
                         Name: Tapas Rioja
                         Category: Large groups
                         Location: Barcelona, Spain
