desktop view completed for main page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class="nav-header">
             <div class="nav-wrapper">
                 <div class="nav-logo">
-                    <!-- <figure> -->
                         <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
-                    <!-- </figure> -->
                     <h1>restaurant passport</h1>
                 </div>
                 <nav>
@@ -123,7 +121,7 @@
             <div class="main-bot-wrapper">
                 <section>
                     <p>
-                        Do you own a restaurant?
+                        Do you own a restaurant?<br>
                         We’d like to know more about your restaurant and
                         introduce our users to it!
                     </p>
@@ -131,7 +129,7 @@
                 </section>
                 <section>
                     <p>
-                        Are you a foodie?
+                        Are you a foodie?<br>
                         Here’s an opportunity of a lifetime, eat, curate
                         restaurants in your location and get paid!
                     </p>
@@ -140,18 +138,27 @@
             </div>
         </main>
         <footer>
-            <nav>
-                <a href="./cities.html">Cities</a>
-                <a href="#"> Sign up/Login</a>
-                <a href="#">Partners</a>
-                <a href="#">Help</a>
-                <a href="#"> Restaurant listing application</a>
-                <a href="#">Reviewer application</a>
-                <a href="#">Meet the team</a>
-                <a href="#">Blog</a>
-            </nav>
+            <div class="footer-nav">
+                <div class="footer-logo">
+                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                    <h1>restaurant<br> passport</h1>
+                </div>
+                <nav>
+                    <a href="./cities.html">Cities</a>
+                    <a href="#"> Sign up/Login</a>
+                    <a href="#">Partners</a>
+                    <a href="#">Help</a>
+                </nav>
+                <nav>
+                    <a href="#"> Restaurant listing application</a>
+                    <a href="#">Reviewer application</a>
+                    <a href="#">Meet the team</a>
+                    <a href="#">Blog</a>
+                </nav>
+        </div>
             <h3>Copyright 2019</h3>
         </footer>
+        
     </div>
 </body>
 </html>
