made some changes to cities form

--- a/cities.html
+++ b/cities.html
@@ -16,7 +16,7 @@
                         <h1>restaurant passport</h1>
                 </div>
                 <nav>
-                    <a href="./cities.html">Cities</a>
+                    <a href="./index.html">Home</a>
                     <a href="#">Login</a>
                     <a href="#">Partners</a>
                     <a href="#">Help</a>
