completed mobile and tablet views for index.html

--- a/index.html
+++ b/index.html
@@ -101,21 +101,23 @@
             </div>
             <div class="main-mid-wrapper">
                 <section class="img-wrapper-1">
-                    <img id="img-1" src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    <!-- <figure>  -->
+                        <img id="img-1" src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    <!-- </figure>  -->
                     <p id="hidden-p">
-                        Name: Pete’s pasta
-                        Category: Date Nights
-                        Location: Manhattan, New York
-                        Rating: 85%
+                        Name: Pete’s pasta<br>
+                        Category: Date Nights<br>
+                        Location: Manhattan,<br> New York<br>
+                        Rating: 85%<br>
                     </p>
                 </section>
                 <section class="img-wrapper-3">
-                     <img id="img-3" src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg"> 
+                    <img id="img-3" src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">        
                     <p id="hidden-p3">
-                        Name: Tapas Rioja
-                        Category: Large groups
-                        Location: Barcelona, Spain
-                        Rating: 80%
+                        Name: Tapas Rioja<br>
+                        Category: Large groups<br>
+                        Location: Barcelona, Spain<br>
+                        Rating: 80%<br>
                     </p>
                 </section>
             </div>
