--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h2>View by Category</h2>
                         <h3>Category 1</h3>
                         <p>Lunch, Breakfast, Dinner, 24/7,
-                            All day eating, <br>Alcohol served, No alcohol</p>
+                            All day eating, Alcohol served, No alcohol</p>
                         <h3>Category 2</h3>
                         <p>Kid friendly, Business eating, Date night, Big groups</p>
                         <h3>Category 3</h3>
@@ -100,25 +100,33 @@
                 <h2>Popular in their categories</h2>
             </div>
             <div class="main-mid-wrapper">
-                <section class="img-wrapper-1">
-                    <!-- <figure>  -->
-                        <img id="img-1" src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
-                    <!-- </figure>  -->
-                    <p id="hidden-p">
-                        Name: Pete’s pasta<br>
-                        Category: Date Nights<br>
-                        Location: Manhattan,<br> New York<br>
-                        Rating: 85%<br>
-                    </p>
+                <section class="img-wrapper">
+                     <figure class="main-img-wrapper">  
+                        <img  src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                     </figure>  
+                     <div class="hidden-p">
+                        <p>
+                            Name: Pete’s pasta<br>
+                            Category: Date Nights<br>
+                            Location: Manhattan,<br> New York<br>
+                            Rating: 85%<br>
+                        </p>
+                        <div class="fading-effect"></div>
+                    </div>
                 </section>
-                <section class="img-wrapper-3">
-                    <img id="img-3" src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">        
-                    <p id="hidden-p3">
-                        Name: Tapas Rioja<br>
-                        Category: Large groups<br>
-                        Location: Barcelona, Spain<br>
-                        Rating: 80%<br>
-                    </p>
+                <section class="img-wrapper">
+                    <figure class="main-img-wrapper">
+                        <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">        
+                    </figure>
+                    <div class="hidden-p">
+                        <p>
+                            Name: Tapas Rioja<br>
+                            Category: Large groups<br>
+                            Location: Barcelona, Spain<br>
+                            Rating: 80%<br>
+                        </p>
+                        <div class="fading-effect"></div>
+                    </div>
                 </section>
             </div>
             <div class="main-bot-wrapper">
