refactored my code, added some images and changed background colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="body-container">
         <div class="nav-header">
             <div class="nav-wrapper">
                 <div class="nav-logo">
-                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
-                        <h1>restaurant passport</h1>
+                    <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                    <h1>restaurant passport</h1>
                 </div>
                 <nav>
                     <a href="./cities.html">Cities</a>
@@ -27,7 +29,8 @@
             <header class="header-wrapper">
                 <div class="header-left">
                     <p>
-                        We are removing the guesswork out of eating out.<br> Find great restaurants in your location now<br>
+                        We are removing the guesswork out of eating out.<br> Find great restaurants in your location
+                        now<br>
                         and give them your own stamp of approval.
                     </p>
                 </div>
@@ -68,26 +71,35 @@
         <main class="main-wrapper">
             <div class="main-top-wrapper">
                 <section class="category-section">
-                    <h2>View by Category</h2>
-                        <h3>Category 1</h3>
-                        <p>Lunch, Breakfast, Dinner, 24/7,
-                            All day eating, Alcohol served, No alcohol</p>
-                        <h3>Category 2</h3>
-                        <p>Kid friendly, Business eating, Date night, Big groups</p>
-                        <h3>Category 3</h3>
-                        <p> Outdoor restaurant, Indoor restaurant, Rooftop restaurant</p>
+                    <figure>
+                        <img src="./imgs/to_do_list.png">
+                    </figure>
+                    <h2>View by category</h2>
+                    <h3>Category 1</h3>
+                    <p>Lunch, Breakfast, Dinner, 24/7,
+                        All day eating, Alcohol served, No alcohol</p>
+                    <h3>Category 2</h3>
+                    <p>Kid friendly, Business eating, Date night, Big groups</p>
+                    <h3>Category 3</h3>
+                    <p> Outdoor restaurant, Indoor restaurant, Rooftop restaurant</p>
                 </section>
                 <!-- <hr> -->
                 <section>
+                    <figure>
+                        <img src="./imgs/5 stars.jpg">
+                    </figure>
                     <h2>View by popularity</h2>
                     <p>
                         Get to know the current popular restaurant in your location.<br>
                         You will never have to miss out on the popular places anymore.<br>
-                        Find the current trendiest and hottest restaurant in  your location
+                        Find the current trendiest and hottest restaurant in your location
                     </p>
                 </section>
                 <!-- <hr> -->
                 <section>
+                    <figure>
+                        <img src="./imgs/cost.jpg">
+                    </figure>
                     <h2>View by cost</h2>
                     <p>
                         Eating out does not have create a hole
@@ -101,10 +113,10 @@
             </div>
             <div class="main-mid-wrapper">
                 <section class="img-wrapper">
-                     <figure class="main-img-wrapper">  
-                        <img  src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
-                     </figure>  
-                     <div class="hidden-p">
+                    <figure class="main-img-wrapper">
+                        <img src="./imgs/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    </figure>
+                    <div class="hidden-p">
                         <p>
                             Name: Pete’s pasta<br>
                             Category: Date Nights<br>
@@ -116,7 +128,7 @@
                 </section>
                 <section class="img-wrapper">
                     <figure class="main-img-wrapper">
-                        <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">        
+                        <img src="./imgs/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg">
                     </figure>
                     <div class="hidden-p">
                         <p>
@@ -151,7 +163,7 @@
         <footer>
             <div class="footer-nav">
                 <div class="footer-logo">
-                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                    <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
                     <h1>restaurant<br> passport</h1>
                 </div>
                 <nav>
@@ -166,10 +178,11 @@
                     <a href="#">Meet the team</a>
                     <a href="#">Blog</a>
                 </nav>
-        </div>
+            </div>
             <h3>Copyright 2019</h3>
         </footer>
-        
+
     </div>
 </body>
+
 </html>
