added more images to index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             </div>
             <div class="main-bot-wrapper">
                 <section>
+                    <figure>
+                        <img src="./imgs/chef.png">
+                    </figure>
                     <p>
                         Do you own a restaurant?<br>
                         We’d like to know more about your restaurant and
@@ -151,6 +154,9 @@
                     <button>Learn more</button>
                 </section>
                 <section>
+                    <figure>
+                        <img src="./imgs/plate.png">
+                    </figure>
                     <p>
                         Are you a foodie?<br>
                         Here’s an opportunity of a lifetime, eat, curate
