removed outer margins from the body element

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="outer-body-container">
     <div class="body-container">
         <div class="nav-header">
             <div class="nav-wrapper">
@@ -188,6 +189,7 @@
             <h3>Copyright 2019</h3>
         </footer>
 
+    </div>
     </div>
 </body>
 
