--- a/cities.html
+++ b/cities.html
@@ -11,110 +11,110 @@
 </head>
 
 <body>
-    <div class="cities-body-container">
-        <div class="cities-nav-header">
-            <div class="cities-nav-wrapper">
-                <div class="cities-nav-logo">
-                    <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
-                    <h1>restaurant passport</h1>
+    <div class="cities-outer-body-container">
+        <div class="cities-body-container">
+            <div class="cities-nav-header">
+                <div class="cities-nav-wrapper">
+                    <div class="cities-nav-logo">
+                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                        <h1>restaurant passport</h1>
+                    </div>
+                    <nav>
+                        <a href="./index.html">Home</a>
+                        <a href="#">Login</a>
+                        <a href="#">Partners</a>
+                        <a href="#">Help</a>
+                        <a href="#">Meet the team</a>
+                    </nav>
                 </div>
-                <nav>
-                    <a href="./index.html">Home</a>
-                    <a href="#">Login</a>
-                    <a href="#">Partners</a>
-                    <a href="#">Help</a>
-                    <a href="#">Meet the team</a>
-                </nav>
+                <header class="cities-header-wrapper">
+                    <div class="form-container">
+                        <div class="cities-form">
+                            <form>
+                                <input type="text" placeholder="City">
+                                <input type="text" placeholder="Category">
+                                <input type="text" placeholder="Popularity">
+                                <input type="text" placeholder="Cost">
+                                <button>Search</button>
+                            </form>
+                        </div>
+                    </div>
+                </header>
             </div>
-            <header class="cities-header-wrapper">
-                <div class="form-container">
-                    <div class="cities-form">
-                        <form>
-                            <input type="text" placeholder="City">
-                            <input type="text" placeholder="Category">
-                            <input type="text" placeholder="Popularity">
-                            <input type="text" placeholder="Cost">
-                            <button>Search</button>
-                        </form>
+            <div class="cities-h2">
+                <h2>Featured restaurants</h2>
+            </div>
+            <main class="cities-main-wrapper">
+                <div class="cities-main-top-wrapper">
+                    <div class="cities-main-left">
+                        <img src="imgs/cjs-karen-out.jpg">
+                        <p>CJ’s is a must visit.
+                            It offers great
+                            ambience and food in
+                            Nairobi, that has proven
+                            to be very popular.
+                            It has opened two more
+                            locations in Village
+                            market and Karen to
+                            serve its ever-growing
+                            clientelle.
+                            Cost
+                            Popularity: 89%
+                            Category: Date night,Big groups, kid friendly,
+                            all day eating, no alcohol, indoor restaurant<br>
+                            website: https://cjs.co.ke/
+                        </p>
+                    </div>
+                    <div class="cities-main-right">
+                        <img src="imgs/kiliamnjaro_big.jpg">
+                        <p>
+                            Kilimanjaro chain
+                            of restaurants in
+                            Nairobi is your go to
+                            place for authenitic
+                            Kenyan dishes at an
+                            affordable price. You
+                            may have to wait to
+                            get a seat during
+                            peak hours.
+                            Cost: $
+                            Popularity: 93%
+                            Category: Date night,Big groups, kid friendly,
+                            all day eating, no alcohol, indoor restaurant
+                            Website: none
+                        </p>
                     </div>
                 </div>
-            </header>
+                <div class="cities-main-bot-wrapper">
+                    <h2>Sign up for our newsletter</h2>
+                    <form>
+                        <input type="text" placeholder="email">
+                    </form>
+                    <button>Submit</button>
+                </div>
+            </main>
+            <footer class="cities-footer-wrapper">
+                <div class="cities-footer-nav">
+                    <div class="cities-footer-logo">
+                        <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
+                        <h1>restaurant<br> passport</h1>
+                    </div>
+                    <nav>
+                        <a href="./index.html">Home</a>
+                        <a href="#"> Sign up/Login</a>
+                        <a href="#">Partners</a>
+                        <a href="#">Help</a>
+                    </nav>
+                    <nav>
+                        <a href="#"> Restaurant listing application</a>
+                        <a href="#">Reviewer application</a>
+                        <a href="#">Meet the team</a>
+                        <a href="#">Blog</a>
+                    </nav>
+                </div>
+                <h3>Copyright 2019</h3>
+            </footer>
         </div>
-        <div class="cities-h2">
-            <h2>Featured restaurants</h2>
-        </div>
-        <main class="cities-main-wrapper">
-            <div class="cities-main-top-wrapper">
-                <div class="cities-main-left">
-                    <img src="imgs/cjs-karen-out.jpg">
-                    <p>CJ’s is a must visit.
-                        It offers great
-                        ambience and food in
-                        Nairobi, that has proven
-                        to be very popular.
-                        It has opened two more
-                        locations in Village
-                        market and Karen to
-                        serve its ever-growing
-                        clientelle.
-                        Cost
-                        Popularity: 89%
-                        Category: Date night,Big groups, kid friendly,
-                        all day eating, no alcohol, indoor restaurant<br>
-                        website: https://cjs.co.ke/
-                    </p>
-                </div>
-                <div class="cities-main-right">
-                    <img src="imgs/kiliamnjaro_big.jpg">
-                    <p>
-                        Kilimanjaro chain
-                        of restaurants in
-                        Nairobi is your go to
-                        place for authenitic
-                        Kenyan dishes at an
-                        affordable price. You
-                        may have to wait to
-                        get a seat during
-                        peak hours.
-                        Cost: $
-                        Popularity: 93%
-                        Category: Date night,Big groups, kid friendly,
-                        all day eating, no alcohol, indoor restaurant
-                        Website: none
-                    </p>
-                </div>
-            </div>
-            <div class="cities-main-bot-wrapper">
-                <h2>Sign up for our newsletter</h2>
-                <form>
-                    <input type="text" placeholder="email">
-                </form>
-                <button>Submit</button>
-            </div>
-        </main>
-        <footer class="cities-footer-wrapper">
-            <div class="cities-footer-nav">
-                <div class="cities-footer-logo">
-                    <img src="./imgs/acf1daa1-d5df-4a1e-b25c-360ef4cb91aa_200x200.png">
-                    <h1>restaurant<br> passport</h1>
-                </div>
-                <nav>
-                    <a href="./index.html">Home</a>
-                    <a href="#"> Sign up/Login</a>
-                    <a href="#">Partners</a>
-                    <a href="#">Help</a>
-                </nav>
-                <nav>
-                    <a href="#"> Restaurant listing application</a>
-                    <a href="#">Reviewer application</a>
-                    <a href="#">Meet the team</a>
-                    <a href="#">Blog</a>
-                </nav>
-            </div>
-            <h3>Copyright 2019</h3>
-        </footer>
     </div>
-
 </body>
-
 </html>
