added line break to cities.html main section

--- a/cities.html
+++ b/cities.html
@@ -57,12 +57,12 @@
                             locations in Village
                             market and Karen to
                             serve its ever-growing
-                            clientelle.
-                            Cost
-                            Popularity: 89%
+                            clientelle.<br>
+                            Cost:$$<br>
+                            Popularity: 89%<br>
                             Category: Date night,Big groups, kid friendly,
                             all day eating, no alcohol, indoor restaurant<br>
-                            website: https://cjs.co.ke/
+                            website:https://cjs.co.ke/
                         </p>
                     </div>
                     <div class="cities-main-right">
@@ -76,11 +76,11 @@
                             affordable price. You
                             may have to wait to
                             get a seat during
-                            peak hours.
-                            Cost: $
-                            Popularity: 93%
+                            peak hours.<br>
+                            Cost: $<br>
+                            Popularity: 93%<br>
                             Category: Date night,Big groups, kid friendly,
-                            all day eating, no alcohol, indoor restaurant
+                            all day eating, no alcohol, indoor restaurant<br>
                             Website: none
                         </p>
                     </div>
