made some changes to header section index.html

--- a/cities.html
+++ b/cities.html
@@ -101,7 +101,8 @@
                     </div>
                     <nav>
                         <a href="./index.html">Home</a>
-                        <a href="#"> Sign up/Login</a>
+                        <a href="#"> Sign up</a>
+                        <a href="#">Login</a>
                         <a href="#">Partners</a>
                         <a href="#">Help</a>
                     </nav>
