--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </h2>
                             <h3>
                                 Enter your details to access
-                                restaurants close to you
+                                restaurants<br> close to you
                             </h3>
                         </div>
                         <div>
@@ -175,7 +175,8 @@
                 </div>
                 <nav>
                     <a href="./cities.html">Cities</a>
-                    <a href="#"> Sign up/Login</a>
+                    <a href="#"> Sign up</a>
+                    <a href="#">Login</a>
                     <a href="#">Partners</a>
                     <a href="#">Help</a>
                 </nav>
