added my name to copyright in footer

--- a/cities.html
+++ b/cities.html
@@ -113,7 +113,7 @@
                         <a href="#">Blog</a>
                     </nav>
                 </div>
-                <h3>Copyright 2019</h3>
+                <h3>Copyright Mildred Awuor 2019</h3>
             </footer>
         </div>
     </div>
