--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <a href="#">Blog</a>
                 </nav>
             </div>
-            <h3>Copyright 2019</h3>
+            <h3>Copyright  Mildred Awuor 2019</h3>
         </footer>
 
     </div>
